# exeai

./: .gitignore  .nojekyll  23_exeai.Rproj  Dockerfile  LICENSE.md  README.md  _quarto.yml  index.html  index.qmd  pyproject.toml  references.bib  references.html  references.qmd  requirements.txt  robots.txt  search.json  sitemap.xml
.devcontainer/: devcontainer.json
appendix/: ai_tools.html  ai_tools.ipynb  ai_tools.qmd  docker.html  docker.ipynb  docker.qmd  jupyternotebook.html  jupyternotebook.ipynb  jupyternotebook.qmd  vscode.html  vscode.ipynb  vscode.qmd
project/: submit.ipynb  submit.qmd
reference/: 書誌情報_6ステップでマスターする機械学習.bib  書誌情報_AIの倫理学.bib  書誌情報_AI技術の最前線.bib  書誌情報_Kaggleで勝つデータ分析の技術.bib  書誌情報_Pythonによるデータ分析入門.bib  書誌情報_PythonユーザのためのJupyter実践入門.bib  書誌情報_RとPythonで学ぶ実践的データサイエンス&機械学習.bib  書誌情報_scikit-learn、Keras、TensorFlowによる実践機械学習.bib  書誌情報_これならわかる深層学習入門.bib  書誌情報_しくみがわかる深層学習.bib  書誌情報_イラストで学ぶ人工知能概論.bib  書誌情報_サポートベクトルマシン.bib  書誌情報_ゼロからつくるPython機械学習プログラミング入門.bib  書誌情報_ゼロからはじめるデータサイエンス.bib  書誌情報_ゼロから作るDeep Learning.bib  書誌情報_ディープラーニングを支える技術.bib  書誌情報_ディープラーニングを支える技術2.bib  書誌情報_データサイエンスのための数学.bib  書誌情報_人工知能の基礎.bib  書誌情報_人工知能プログラミングのための数学がわかる本.bib  書誌情報_応用基礎としてのデータサイエンス.bib  書誌情報_機械学習のための特徴量エンジニアリング.bib  書誌情報_機械学習を解釈する技術.bib  書誌情報_機械学習エンジニアのためのTransformers.bib  書誌情報_深層学習.bib  書誌情報_深層学習2022柳井.bib  書誌情報_深層学習の原理に迫る.bib  書誌情報_現場で使えるNumPyデータ処理入門.bib  書誌情報_生成Deep_Learning.bib  書誌情報_自然言語処理の基礎.bib  書誌情報_評価指標入門.bib  書誌情報_退屈なことはPythonにやらせよう.bib
week01/: guidance.html  guidance.qmd
week02/: .gitignore  0201_pandas.html  0201_pandas.ipynb  0201_pandas.qmd  0202_matplotlib.html  0202_matplotlib.ipynb  0202_matplotlib.qmd  index.html  index.qmd  matplotlib.ipynb
week03/: 03_mathematics.html  03_mathematics.ipynb  03_mathematics.qmd  index.html  index.qmd
week04/: 0401_penguins.html  0401_penguins.ipynb  0401_penguins.qmd  0402_classification.html  0402_classification.ipynb  0402_classification.qmd  answer.ipynb  index.html  index.qmd  your_turn.qmd
week05/: 0501_regression.html  0501_regression.ipynb  0501_regression.qmd  0502_svm.html  0502_svm.ipynb  (+6 more)
(+45 files in other folders)
