[tool.poetry]
name = "23-exeai"
version = "0.1.0"
description = "徳島大学 教養教育院・教養科目群・自然と技術 「AI総合演習」のためのPython環境"
authors = ["Shinya Uryu <uryu.shinya@tokushima-u.ac.jp>"]
readme = "README.md"
packages = [{include = "23_exeai"}]

[tool.poetry.dependencies]
python = "^3.10"
qrcode = "^7.4.2"
pillow = "^9.5.0"
ipykernel = "^6.22.0"
pins = "^0.8.1"
plotly = "^5.14.1"
polars = "^0.17.5"
matplotlib = "^3.7.1"
japanize-matplotlib = "^1.1.3"
pyarrow = "^11.0.0"
numba = "0.56.3"
notebook = "^6.5.4"
jupyterlab = "^3.6.3"
palmerpenguins = "^0.1.4"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
jupytext = "^1.14.5"
jupyterlab-code-formatter = "^1.6.1"
black = "^23.3.0"
isort = "^5.12.0"
nbdev = "^2.3.12"
jupyterlab-quarto = "^0.1.45"
jupyterlab-lsp = "^4.1.0"
python-lsp-server = "^1.7.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
